--- a/src/App.css
+++ b/src/App.css
@@ -513,3 +513,78 @@ header a {
   list-style: none;
   text-decoration: none;
 }
+
+.Success {
+  width: 860px;
+  height: 600px;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 28px;
+}
+
+.SuccessText {
+  width: 360px;
+  height: 150px;
+  text-align: center;
+}
+
+.SuccessText span:first-child {
+  color: black;
+  font-size: 48px;
+  font-family: 'Karla', sans-serif;
+  font-weight: 800;
+  text-transform: capitalize;
+  word-wrap: break-word;
+}
+
+.SuccessText span:last-child {
+  color: black;
+  font-size: 16px;
+  font-family: 'Karla', sans-serif;
+  font-weight: 800;
+  text-transform: capitalize;
+  word-wrap: break-word;
+}
+
+.SuccessPic {
+  width: 250px;
+  height: 250px;
+}
+
+.ButtonPrimary .Label {
+  color: black;
+  font-size: 16px;
+  font-family: 'Karla', sans-serif;
+  font-weight: 700;
+  word-wrap: break-word;
+  text-align: center;
+}
+
+.ButtonPrimary:hover {
+  background: #e2b40f;
+}
+
+.ReservationForm {
+  width: 860px;
+  height: auto;
+  padding: 22px 13px;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Select {
+  width: 300px;
+  height: 50px;
+  padding-left: 12px;
+  background: white;
+  border-radius: 8px;
+  border: 1px solid #D9D9D9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
